<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".dealer.DealerAddProduct">


    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/rel2"
        android:elevation="5dp"
        android:background="#FF6F00"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:textColor="#fff"
            android:fontFamily="@font/ubuntu_m"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_arrow"
            android:id="@+id/close"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="18dp"
            android:layout_alignParentLeft="true"/>


    </RelativeLayout>


    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




        <RelativeLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_details"
                android:fontFamily="@font/ubuntu_m"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:id="@+id/txt_lbl"/>

            <Spinner
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_lbl"
                android:id="@+id/pro_categories"
                android:layout_marginTop="15dp"
                android:spinnerMode="dialog"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit"
                android:padding="20dp"
                />


            <EditText
                android:id="@+id/pro_name"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/pro_categories"
                android:inputType="textPersonName"
                android:hint="@string/product_name"
                android:maxLines="1"
                android:fontFamily="@font/ubuntu_m"
                android:textColorHint="#99AAAB"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit"
                android:padding="20dp"/>

            <EditText
                android:id="@+id/brand_name"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/pro_name"
                android:inputType="textPersonName"
                android:hint="@string/product_brand"
                android:maxLines="1"
                android:fontFamily="@font/ubuntu_m"
                android:textColorHint="#99AAAB"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit"
                android:padding="20dp"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@id/brand_name"
                android:id="@+id/add_img_icon"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:contentDescription="TODO"
                android:layout_marginLeft="15dp"
                android:src="@drawable/add_img"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/brand_name"
                android:layout_toRightOf="@id/add_img_icon"
                android:text="@string/add_image"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ubuntu_m"
                android:textSize="18sp"
                android:id="@+id/lbl1"
                android:padding="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl1"
                android:layout_toRightOf="@id/add_img_icon"
                android:text="@string/attach_appropriate_image_of_product_that_you_can_sell"
                android:fontFamily="@font/ubuntu_m"
                android:textSize="12sp"
                android:layout_marginLeft="20dp"
                android:id="@+id/lbl2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl2"
                android:layout_toRightOf="@id/add_img_icon"
                android:text="@string/image_not_updatable_next_time"
                android:fontFamily="@font/ubuntu_m"
                android:textSize="10sp"
                android:textColor="#E8290B"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/lbl3"/>

            <EditText
                android:id="@+id/qty"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_img_icon"
                android:inputType="textPersonName"
                android:hint="@string/add_quantity"
                android:maxLines="1"
                android:fontFamily="@font/ubuntu_m"
                android:textColorHint="#99AAAB"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit"
                android:padding="20dp"/>

            <EditText
                android:id="@+id/rate_pro"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/qty"
                android:inputType="textPersonName"
                android:hint="@string/rate_per_product"
                android:maxLines="1"
                android:fontFamily="@font/ubuntu_m"
                android:textColorHint="#99AAAB"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit"
                android:padding="20dp"/>

            <Spinner
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/rate_pro"
                android:id="@+id/pro_unit"
                android:layout_marginTop="20dp"
                android:spinnerMode="dialog"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit"
                android:padding="20dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_product"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/pro_unit"
                android:layout_centerHorizontal="true"
                android:backgroundTint="#FFAA00"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/add_product"
                android:textAllCaps="false"
                app:cornerRadius="0dp"
                android:clickable="true"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"/>



        </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main"
                android:id="@+id/dealer_product_list"/>


        </RelativeLayout>


    </ScrollView>





</RelativeLayout>